fix: compute env selection alignment

--- a/src/components/@shared/FormInput/InputElement/ComputeEnvSelection/index.module.css
+++ b/src/components/@shared/FormInput/InputElement/ComputeEnvSelection/index.module.css
@@ -22,3 +22,7 @@
 .row:last-child {
   border-bottom: none;
 }
+
+.details {
+  composes: did from '../AssetSelection/index.module.css';
+}
